exports[`ProfilePicture should disable pagination next button if there is no imagePath 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "backgroundColor": "#e5e5e5",
        "flexDirection": "row",
        "height": 6
      }
    }>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#f77040"
          },
          Object {
            "flex": 0.14285714285714285
          }
        ]
      } />
    <View
      style={
        Object {
          "flex": 0.8571428571428572
        }
      } />
  </View>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16
        },
        Object {}
      ]
    }>
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          }
        ]
      }>
      Add a profile picture
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function bound touchableHandleResponderGrant]}
    onResponderMove={[Function bound touchableHandleResponderMove]}
    onResponderRelease={[Function bound touchableHandleResponderRelease]}
    onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
    onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
    onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
    style={
      Object {
        "alignItems": "center"
      }
    }
    testID={undefined}>
    <Image
      source={1}
      style={
        Object {
          "height": 120,
          "marginBottom": 19,
          "width": 120
        }
      } />
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "color": "#9fb1b3",
            "fontSize": 18
          }
        ]
      }>
      Choose Photo
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end"
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300
            },
            undefined
          ]
        }>
        <Text
          style={
            Object {
              "color": "#333333",
              "margin": 20
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center"
            },
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#f77040",
              "borderWidth": 1
            },
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0
              },
              Object {
                "flex": 1
              }
            ],
            Object {
              "borderColor": "#dfe5e6"
            }
          ]
        }>
        <Text
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 13,
                "textAlign": "center"
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "marginBottom": 17,
                  "marginTop": 15
                },
                Object {
                  "color": "#f77040"
                },
                Object {
                  "color": "#dfe5e6"
                }
              ]
            ]
          }>
          NEXT
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ProfilePicture should enable pagination next button if there is an imagePath 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "backgroundColor": "#e5e5e5",
        "flexDirection": "row",
        "height": 6
      }
    }>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#f77040"
          },
          Object {
            "flex": 0.14285714285714285
          }
        ]
      } />
    <View
      style={
        Object {
          "flex": 0.8571428571428572
        }
      } />
  </View>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16
        },
        Object {}
      ]
    }>
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          }
        ]
      }>
      Add a profile picture
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function bound touchableHandleResponderGrant]}
    onResponderMove={[Function bound touchableHandleResponderMove]}
    onResponderRelease={[Function bound touchableHandleResponderRelease]}
    onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
    onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
    onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
    style={
      Object {
        "alignItems": "center"
      }
    }
    testID={undefined}>
    <Image
      source={
        Object {
          "uri": "path/to/image.png"
        }
      }
      style={
        Object {
          "height": 120,
          "marginBottom": 19,
          "width": 120
        }
      } />
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "color": "#9fb1b3",
            "fontSize": 18
          }
        ]
      }>
      Choose Photo
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end"
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300
            },
            undefined
          ]
        }>
        <Text
          style={
            Object {
              "color": "#333333",
              "margin": 20
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300
            },
            undefined
          ]
        }>
        <Text
          style={
            Object {
              "color": "#333333",
              "margin": 20
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ProfilePicture should map props correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "backgroundColor": "#e5e5e5",
        "flexDirection": "row",
        "height": 6
      }
    }>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#f77040"
          },
          Object {
            "flex": 0.14285714285714285
          }
        ]
      } />
    <View
      style={
        Object {
          "flex": 0.8571428571428572
        }
      } />
  </View>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16
        },
        Object {}
      ]
    }>
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          }
        ]
      }>
      Add a profile picture
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function bound touchableHandleResponderGrant]}
    onResponderMove={[Function bound touchableHandleResponderMove]}
    onResponderRelease={[Function bound touchableHandleResponderRelease]}
    onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
    onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
    onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
    style={
      Object {
        "alignItems": "center"
      }
    }
    testID={undefined}>
    <Image
      source={
        Object {
          "uri": "path/to/image.png"
        }
      }
      style={
        Object {
          "height": 120,
          "marginBottom": 19,
          "width": 120
        }
      } />
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "color": "#9fb1b3",
            "fontSize": 18
          }
        ]
      }>
      Choose Photo
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end"
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300
            },
            undefined
          ]
        }>
        <Text
          style={
            Object {
              "color": "#333333",
              "margin": 20
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300
            },
            undefined
          ]
        }>
        <Text
          style={
            Object {
              "color": "#333333",
              "margin": 20
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;
